<resources>
    <string name="app_name">TR Acoustools</string>
    <string name="sala">Sala</string>
    <string name="SALA">SALA</string>
    <string name="superficies">Superficies</string>
    <string name="SUPERFICIES">SUPERFICIES</string>
    <string name="extras">Extras</string>
    <string name="materiales">Materiales</string>
    <string name="calcular">Calcular</string>
    <string name="nombre">Nombre:</string>
    <string name="alto">Alto:</string>
    <string name="largo">Largo:</string>
    <string name="ancho">Ancho:</string>
    <string name="volumen">Volumen:</string>
    <string name="suptotal">Superficie Total:</string>
    <string name="calcvol">Calcular\nVolumen\ny\nSuperficie</string>
    <string name="m">[m]</string>
    <string name="m2">[m2]</string>
    <string name="__m2">" [m2]"</string>
    <string name="m3">[m3]</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar\nTodo</string>
    <string name="lado1">Lado 1:</string>
    <string name="lado2">Lado 2:</string>
    <string name="Calc_area">Calcular\nÁrea</string>
    <string name="area">Área:</string>
    <string name="material">Material:</string>
    <string name="detalles">Detalles:</string>
    <string name="Coefab">Coeficientes de absorción:</string>
    <string name="Supsalarestante">Superficie de sala restante:</string>
    <string name="nueva_sup">Nueva Superficie</string>
    <string name="oct125">125 Hz.</string>
    <string name="oct250">250 Hz.</string>
    <string name="oct500">500 Hz.</string>
    <string name="oct1000">1 KHz.</string>
    <string name="oct2000">2 KHz.</string>
    <string name="oct4000">4 KHz.</string>
    <string name="exc">(Excedido)</string>
</resources>
