<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tracoustools.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/sala"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/sala"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/sala"
        android:textAllCaps="true"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/superficies"
        android:id="@+id/superficies"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/superficies"
        android:textAllCaps="true"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extras"
        android:padding="16dp"
        android:text="@string/extras"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/extras"
        android:layout_weight="1"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/materiales"
        android:padding="16dp"
        android:text="@string/materiales"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/materiales"
        android:textAllCaps="true"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calcular"
        android:padding="16dp"
        android:text="@string/calcular"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/calcular"
        android:textAllCaps="true"
        android:layout_weight="1"/>


</LinearLayout>